Fix: Enhance ApiError with constructor, refactor OrderEvent and PaymentServiceImpl for improved clarity and functionality; mark subprojects as dirty